--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app1"></div>
+    <div id="app1"></div><!-- flag{docker_container_master_2024} -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
